Remove env variables

--- a/src/.env
+++ b/src/.env
@@ -1,25 +1,20 @@
 SMS_API_KEY = "apikey-from-africastalking"
 SMS_USERNAME = "api-username-under-created-project"
 
-MONGO_USERNAME = "danny"
-MONGO_PASSWORD = "25812345Dan"
-MONGO_HOST = "127.0.0.1"
-MONGO_DATABASE = "eventagedb"
+MONGO_USERNAME = ""
+MONGO_PASSWORD = ""
+MONGO_HOST = ""
+MONGO_DATABASE = ""
 
-APP_EMAIL_ADDRESS = "danny@onesha.co.ke"
-APP_EMAIL_PASSWORD = "25812345Dan"
-APP_EMAIL_HOST = "mail.onesha.co.ke"
+APP_EMAIL_ADDRESS = ""
+APP_EMAIL_PASSWORD = ""
+APP_EMAIL_HOST = ""
 
 APP_LOCAL_URL = "http://127.0.0.1:5000"
-APP_PROD_URL = "https://pivotapp.herokuapp.com"
+APP_PROD_URL = ""
 
-PAYPAL_CLIENT_ID = "Abw8Yueu_v4qS-NRZbaSAtcU-yyvMQ9hJBO_NrVC0Unw1Pwzzlve4pAnOMm5BZ3R919U09MClK50WFBg"
-PAYPAL_CLIENT_SECRET = "EE12PQbiRGaXZsiIkqq9gqnrBwstLnhzAL_s0Re4eq9oilr0fHvphzK8XG9DWzCGAy4PypSb0KP7ZnoX"
+PAYPAL_CLIENT_ID = ""
+PAYPAL_CLIENT_SECRET = ""
 
-AMZN_ACCESS_KEY_ID = "AKIAIDUZUJCSV53DX5UA"
-AMZN_SECRET_ACCESS_KEY = "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"
-
-BT_ENVIRONMENT = 'Sandbox'
-BT_MERCHANT_ID = 'gq7qx8xhc3h5sz8g'
-BT_PUBLIC_KEY = 'nk9m7d372vkxrd9z'
-BT_PRIVATE_KEY = '882f59e7943c24c7fe984be562a48b7b'
+AMZN_ACCESS_KEY_ID = ""
+AMZN_SECRET_ACCESS_KEY = ""
