--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "start": "npm run clean && npm run build && node dist/index.js",
         "build": "tsc -b",
         "clean": "tsc -b --clean",
+        "debug": "node --inspect -r ts-node/register src/index.ts",
         "docker-build": "npm run docker-stop && docker-compose build && docker rmi -f $(docker images --quiet --filter 'dangling=true')",
         "docker-start": "docker-compose up",
         "docker-stop": "docker-compose down"
