--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "dotenv": "^6.1.0",
         "ejs": "^2.6.1",
         "express": "^4.16.4",
+        "jsonwebtoken": "^8.5.1",
         "moment": "^2.24.0",
         "moment-duration-format": "^2.2.2",
         "mongoose": "^5.3.14",
