--- a/.env
+++ b/.env
@@ -1,17 +1,14 @@
-SMS_API_KEY = "apikey-from-africastalking"
-SMS_USERNAME = "api-username-under-created-project"
-
-MONGO_USERNAME = ""
-MONGO_PASSWORD = ""
-MONGO_HOST = ""
-MONGO_DATABASE = ""
+MONGO_USERNAME = "username"
+MONGO_PASSWORD = "password"
+MONGO_HOST = "127.0.0.1"
+MONGO_DATABASE = "database-name"
 
 APP_EMAIL_ADDRESS = ""
 APP_EMAIL_PASSWORD = ""
 APP_EMAIL_HOST = ""
 
 APP_LOCAL_URL = "http://127.0.0.1:5000"
-APP_PROD_URL = ""
+APP_PROD_URL = "https://production-url.net"
 
 PAYPAL_CLIENT_ID = ""
 PAYPAL_CLIENT_SECRET = ""
