Implement app.register and app.decorate, similar to how fastify implements register and decorate. A plugin architecture

--- a/.env
+++ b/.env
@@ -1,7 +1,3 @@
-MONGO_USERNAME = "username"
-MONGO_PASSWORD = "password"
-MONGO_HOST = "127.0.0.1"
-MONGO_DATABASE = "database-name"
 
 APP_EMAIL_ADDRESS = ""
 APP_EMAIL_PASSWORD = ""
@@ -10,8 +6,8 @@ APP_EMAIL_HOST = ""
 APP_LOCAL_URL = "http://127.0.0.1:5000"
 APP_PROD_URL = "https://production-url.net"
 
-PAYPAL_CLIENT_ID = ""
-PAYPAL_CLIENT_SECRET = ""
+MONGO_PROD_URL = "mongodb://127.0.0.1:27017/express-api-db"
 
-AMZN_ACCESS_KEY_ID = ""
-AMZN_SECRET_ACCESS_KEY = ""
+JWT_SECRET = "yhf83i430ge,c209i32"
+
+APPLICATION_NAME = "Express API"
