--- a/package.json
+++ b/package.json
@@ -24,24 +24,24 @@
     "author": "Danny Sofftie",
     "license": "ISC",
     "dependencies": {
-        "axios": "^0.19.2",
-        "bcrypt": "^3.0.7",
+        "axios": "^0.20.0",
+        "bcrypt": "^5.0.0",
         "body-parser": "^1.19.0",
-        "cookie-parser": "^1.4.4",
+        "cookie-parser": "^1.4.5",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
-        "ejs": "^3.0.1",
+        "ejs": "^3.1.5",
         "express": "^4.17.1",
         "html-minifier": "^4.0.0",
         "jsonwebtoken": "^8.5.1",
-        "moment": "^2.24.0",
-        "mongoose": "^5.8.9",
+        "moment": "^2.27.0",
+        "mongoose": "^5.10.0",
         "multer": "^1.4.2",
-        "nodemailer": "^6.4.2",
+        "nodemailer": "^6.4.11",
         "serve-favicon": "^2.5.0"
     },
     "engines": {
-        "node": "12.14.1"
+        "node": ">=12.14.1"
     },
     "repository": {
         "type": "git",
@@ -53,15 +53,15 @@
     "homepage": "https://github.com/dannysofftie/express-api.git#readme",
     "devDependencies": {
         "@types/bcrypt": "^3.0.0",
-        "@types/ejs": "^3.0.0",
-        "@types/express": "^4.17.2",
-        "@types/html-minifier": "^3.5.3",
-        "@types/mongoose": "^5.5.42",
-        "@types/multer": "^1.3.10",
-        "@types/node": "^13.1.8",
+        "@types/ejs": "^3.0.4",
+        "@types/express": "^4.17.7",
+        "@types/html-minifier": "^4.0.0",
+        "@types/mongoose": "^5.7.36",
+        "@types/multer": "^1.4.4",
+        "@types/node": "^14.6.0",
         "@types/nodemailer": "^6.4.0",
-        "prettier": "^1.19.1",
-        "ts-node-dev": "^1.0.0-pre.44",
-        "typescript": "^3.7.5"
+        "prettier": "^2.0.5",
+        "ts-node-dev": "^1.0.0-pre.59",
+        "typescript": "^4.0.2"
     }
 }
